# intelligent_tutor_crew

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
research_crew/: pyproject.toml
research_crew/data/output/: feedback.md  grading_results.json  quiz_questions.json  topic_explanation.md
research_crew/src/research_crew/: crew.py  main.py
research_crew/src/research_crew/config/: agents.yaml  tasks.yaml
src/: __init__.py
src/intelligent_tutor_crew/: __init__.py  crew.py  main.py  run.py
src/intelligent_tutor_crew/agents/: __init__.py  feedback_agent.py  grader_agent.py  quiz_agent.py  teacher_agent.py
src/intelligent_tutor_crew/config/: agents.yaml  tasks.yaml
src/intelligent_tutor_crew/tasks/: __init__.py  feedback_task.py  grade_task.py  quiz_task.py  teach_task.py
src/intelligent_tutor_crew/tools/: __init__.py
tests/: __init__.py  test_crew.py
